--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/telegram-web-app": "^7.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -45,7 +46,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
+    "@mui/x-date-pickers": "^7.18.0",
     "axios": "^1.7.7",
+    "luxon": "^3.5.0",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
     "react-router-dom": "^6.26.2",
